# OzonCTF-2025

./: .gitattributes  README.md
crypto/Weierstrass_package/: README.md
crypto/bad_romance/: README.md
forensic/BotNet/: README.md
forensic/Nuclear/: README.md
forensic/SpaceJournal/: README.md
forensic/SpyFamily/: README.md
forensic/Гоша, мне нужна помощь!/: README.md
joy/Gosha dash/: README.md
misc/bimbim/: README.md
misc/bimbim/solve/: sol.py
misc/phantom rox/: README.md
osint/ma_phone/: README.md
osint/new_plain/: README.md
ppc/antispam/: README.md
ppc/antispam/deploy/: Cargo.toml  Dockerfile  build.rs  client.py  docker-compose.yml  generate_dataset.py
ppc/antispam/deploy/proto/: classificator.proto
ppc/antispam/deploy/src/: dataset.csv  main.rs
ppc/palindrome_master/: README.md
pwn/canarable/: README.md
pwn/muggy/: README.md
pwn/snaking/: README.md
pwn/table_notes/: README.md
pwn/v8_hell/: README.md
reverse/cryptor2000/: README.md
reverse/key_scanner/: README.md
reverse/patchimate/: README.md
reverse/step_by_step/: README.md
reverse/xorbfuscated/: README.md
stego/SpaceNoise/: README.md
web/c0ll3ct0r/: README.md
web/enterprice_portal/: README.md
web/gosha_blog/: README.md
web/nginx_serpent/: test_flags.sh
web/nginx_serpent_before_migration_to_gnuicorn/: README.md
web/ozi/: README.md
web/secret_web/: README.md
welcome/joy/: Гусь-кодер.md
welcome/osint/: Алюрки.md  Командная игра.md  Найди гуся Гошу.md  Новые знакомства.md  Отзывчивый гусь.md  Подзарядка.md
welcome/stegano/: Что я хотел сделать.md
(+171 files in other folders)
